--- a/00basic/00seq_data_process.ipynb
+++ b/00basic/00seq_data_process.ipynb
@@ -153,7 +153,103 @@
     "these are the two regions of the genome that are aligned.\n",
     "\n",
     "## 2.2 short sequence\n",
+    "There is an official script used to align short sequence data in LuLab and used in projects including Vmap3 and Vmap4.\n",
     "\n",
+    "2 steps:\n",
+    "- alignment\n",
+    "    - `bwa`\n",
+    "    - `bwa-mem2`: faster than `bwa`, only some line are less for a quality tag than `bwa`\n",
+    "- sort and filter: `samtools`\n",
+    "\n",
+    "Vmap3 script:"
+   ],
+   "id": "4c619cf3c524265a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%%bash\n",
+    "for i in `cat fqlist.txt`\n",
+    "do\n",
+    "\n",
+    "bwa mem -t 20 -R '@RG\\tID:Aegilops\\tPL:illumina\\tSM:Aegilops' /data1/publicData/wheat/reference/v1.0/D/bwaLib/d_iwgscV1.fa.gz ${i}_1.fq.gz ${i}_2.fq.gz | samtools view -S -b -> ${i}.bam\n",
+    "\n",
+    "samtools sort -n -m 4G -@ 20 -o ${i}.namesort.bam -O bam ${i}.bam \\\n",
+    " && samtools fixmate -@ 20 -m ${i}.namesort.bam ${i}.fixmate.bam \\\n",
+    " && samtools sort -m 4G -@ 20 -o ${i}.fixmate.pos.bam -O bam ${i}.fixmate.bam \\\n",
+    " && rm -f ${i}.namesort.bam \\\n",
+    " && samtools markdup -@ 20 -r ${i}.fixmate.pos.bam ${i}.rmdup.bam \\\n",
+    " && rm -f ${i}.fixmate.bam \\\n",
+    " && rm -f ${i}.fixmate.pos.bam\n",
+    "\n",
+    "done\n"
+   ],
+   "id": "b889d47acdad196e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Vmap4 script: `bwa-mem2` version",
+   "id": "e5fadb975f24fd59"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%%bash\n",
+    "#! /bin/bash\n",
+    "\n",
+    "# file name: align-new\n",
+    "# the formal template for reads alignment in Lulab (used in Vmap4 Watkins)\n",
+    "## $1: number\n",
+    "## $2: /path/to/index\n",
+    "## $3: /path/to/fastq_data\n",
+    "\n",
+    "mapfile -t fqlist < fqlist\"$1\".txt\n",
+    "mapfile -t smlist < smlist\"$1\".txt\n",
+    "size=${#fqlist[@]}\n",
+    "for (( i = 0; i < size; i++ ));\n",
+    "do\n",
+    "bwa-mem2 mem -t 20 -R \"@RG\\tID:Triticum\\tPL:illumina\\tSM:${smlist[i]}\" \"$2\"/abd_iwgscV1.fa.gz \"$3\"/${fqlist[i]}/${fqlist[i]}_f1.fastq.gz \"$3\"/${fqlist[i]}/${fqlist[i]}_r2.fastq.gz | samtools view -S -b -> ${fqlist[i]}.bam\n",
+    "samtools sort -n -m 4G -@ 20 -o ${fqlist[i]}.namesort.bam -O bam ${fqlist[i]}.bam && samtools fixmate -@ 20 -m ${fqlist[i]}.namesort.bam ${fqlist[i]}.fixmate.bam && samtools sort -m 4G -@ 20 -o ${fqlist[i]}.fixmate.pos.bam -O bam ${fqlist[i]}.fixmate.bam && rm -f ${fqlist[i]}.namesort.bam && samtools markdup -@ 20 -r ${fqlist[i]}.fixmate.pos.bam ${fqlist[i]}.rmdup.bam && rm -f ${fqlist[i]}.fixmate.bam && rm -f ${fqlist[i]}.fixmate.pos.bam && rm -f ${fqlist[i]}.bam\n",
+    "done\n"
+   ],
+   "id": "8b7f2e478a070d88"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Vmap4 script: `bwa` version",
+   "id": "70d37df045895d62"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%%bash\n",
+    "\n",
+    "mapfile -t fqlist < fqlist.txt\n",
+    "mapfile -t smlist < smlist.txt\n",
+    "size=${#fqlist[@]}\n",
+    "for (( i = 0; i < size; i++ ));\n",
+    "do\n",
+    "bwa mem -t 20 -R \"@RG\\tID:Triticum\\tPL:illumina\\tSM:${smlist[i]}\" /nfs/public_data/wheat/00_genome/reference/v1.0/ABD/bwaLib/abd_iwgscV1.fa.gz \"$1\"/${fqlist[i]}/${fqlist[i]}_f1.fastq.gz \"$1\"/${fqlist[i]}/${fqlist[i]}_r2.fastq.gz | samtools view -S -b -> ${fqlist[i]}.bam\n",
+    "samtools sort -n -m 4G -@ 20 -o ${fqlist[i]}.namesort.bam -O bam ${fqlist[i]}.bam && samtools fixmate -@ 20 -m ${fqlist[i]}.namesort.bam ${fqlist[i]}.fixmate.bam && samtools sort -m 4G -@ 20 -o ${fqlist[i]}.fixmate.pos.bam -O bam ${fqlist[i]}.fixmate.bam && rm -f ${fqlist[i]}.namesort.bam && samtools markdup -@ 20 -r ${fqlist[i]}.fixmate.pos.bam ${fqlist[i]}.rmdup.bam && rm -f ${fqlist[i]}.fixmate.bam && rm -f ${fqlist[i]}.fixmate.pos.bam\n",
+    "done\n"
+   ],
+   "id": "4700f637d6c98d04"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "## 2.3 filter\n",
     "View `.bam` file:\n",
     "- `samtools view filename.bam | less -S`\n",
