--- a/00basic/01genome_annotation.ipynb
+++ b/00basic/01genome_annotation.ipynb
@@ -31,6 +31,11 @@
     "```\n",
     "- bed to fasta: `bedtools getfasta -s -fi JM44.repeat.masked.fasta -bed annotation.bed -fo teseq.fasta`\n",
     "- embl to fasta: `any2fasta test.embl > RMRBSeqs.fa`\n",
+    "\n",
+    "## 1.3 stat specific line number using command line\n",
+    "To do this, you can:\n",
+    "- scan the number of '=' char in the file: `awk '{ print gsub(/=/,\"\") }' 01cs.anno.gff3 > s.txt`\n",
+    "- list the line number of specific char: `grep -n '6' s.txt`\n",
     "\n"
    ],
    "id": "6d1dcd4f70e7aff4"
