--- a/00basic/00seq_data_process.ipynb
+++ b/00basic/00seq_data_process.ipynb
@@ -85,7 +85,7 @@
     "## 1.4 generate reads\n",
     "Sometimes, for benchmark, we need to generate reads from the reference genome.\n",
     "\n",
-    "This can be done using a program called 'iss': `nohup iss generate -p 10 -g kg.1.fa -n 2666667  --mode basic -o ./ &`\n",
+    "This can be done using a program called `iss`: `nohup iss generate -p 10 -g kg.1.fa -n 2666667  --mode basic -o ./ &`\n",
     "\n",
     "## 1.5 grep sequence from reference genome\n",
     "This method can be used on any '.fa' files:\n",
