upload linear algebra

--- a/00basic/00seq_data_process.ipynb
+++ b/00basic/00seq_data_process.ipynb
@@ -290,7 +290,7 @@
     "- `samtools view filename.bam | less -S`\n",
     "\n",
     "## 2.4 record md5 of .bam file\n",
-    "Use `md5sum` to count the md5 of the `.bam` files. There is a script to do this:"
+    "Use `md5sum` to count the md5 of the `.bam` files. There 2 scripts to count and check the md5 codes:"
    ],
    "id": "c7fe7b1b94bb42cd"
   },
@@ -317,6 +317,34 @@
     "wait\n"
    ],
    "id": "f6cc49e092a4bcd5"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%%bash\n",
+    "\n",
+    "# File name: check-md5\n",
+    "# This script is used to check the md5 of the bam files\n",
+    "\n",
+    "## $1: prefix\n",
+    "\n",
+    "mapfile -t dicts < cklist\"$1\".txt\n",
+    "n=${#dicts[@]}\n",
+    "for (( i = 0; i < n; i++ )); do\n",
+    "    refer=$(awk '{print $1}' \"${dicts[i]}\".md5)\n",
+    "    current=$(md5sum \"${dicts[i]}\" | awk '{print $1}')\n",
+    "    if [ \"$current\" == \"$refer\" ]; then\n",
+    "        echo \"${dicts[i]} md5 check OK\"\n",
+    "    else\n",
+    "        echo \"${dicts[i]} md5 check failed\"\n",
+    "    fi\n",
+    "done\n",
+    "wait"
+   ],
+   "id": "b7ce9456ddb33f91"
   },
   {
    "metadata": {},
