--- a/00basic/00seq_data_process.ipynb
+++ b/00basic/00seq_data_process.ipynb
@@ -320,6 +320,39 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "There is a script to separate files into different parts, so that we can run it in parallel:",
+   "id": "12e19a8c02dbe642"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%%bash\n",
+    "\n",
+    "# File name: prepare-check\n",
+    "\n",
+    "ls | grep rmdup.bam | grep -v \"md5\" | grep -v \"bai\" | grep -v \"mosdepth\" > name\n",
+    "sed -n '1,100p' name > cklist1.txt\n",
+    "sed -n '101,200p' name > cklist2.txt\n",
+    "sed -n '201,300p' name > cklist3.txt\n",
+    "sed -n '301,400p' name > cklist4.txt\n",
+    "sed -n '401,500p' name > cklist5.txt\n",
+    "sed -n '501,600p' name > cklist6.txt\n",
+    "sed -n '601,700p' name > cklist7.txt"
+   ],
+   "id": "c04b953db8864e50"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Then, run script `check-md5` below with command: `nohup sh check-md5.sh 1 &`",
+   "id": "e66ec6b50861d509"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
@@ -331,15 +364,23 @@
     "\n",
     "## $1: prefix\n",
     "\n",
+    "if [ ! -f \"cklist$1.txt\" ]; then\n",
+    "    echo \"Error: File cklist$1.txt not found!\"\n",
+    "    exit 1\n",
+    "fi\n",
     "mapfile -t dicts < cklist\"$1\".txt\n",
     "n=${#dicts[@]}\n",
     "for (( i = 0; i < n; i++ )); do\n",
+    "    if [ ! -f \"${dicts[i]}\" ]; then\n",
+    "        echo \"Warning: File ${dicts[i]} not found, skipping...\" >> \"$1\".log\n",
+    "        continue\n",
+    "    fi\n",
     "    refer=$(awk '{print $1}' \"${dicts[i]}\".md5)\n",
     "    current=$(md5sum \"${dicts[i]}\" | awk '{print $1}')\n",
     "    if [ \"$current\" == \"$refer\" ]; then\n",
-    "        echo \"${dicts[i]} md5 check OK\"\n",
+    "        echo \"${dicts[i]} md5 check OK\" >> \"$1\".log\n",
     "    else\n",
-    "        echo \"${dicts[i]} md5 check failed\"\n",
+    "        echo \"${dicts[i]} md5 check failed\" >> \"$1\".log\n",
     "    fi\n",
     "done\n",
     "wait"
@@ -351,6 +392,81 @@
    "cell_type": "markdown",
    "source": [
     "# 3 Variant calling\n",
+    "## 3.0 benchmark Fastcall2\n",
+    "To benchmark Fastcall2, we need to prepare some test dataset.\n",
+    "\n",
+    "You can use the script below to generate a test dataset:"
+   ],
+   "id": "dab04cfb19ea5a21"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%%bash\n",
+    "\n",
+    "#! /bin/bash\n",
+    "\n",
+    "# parameters\n",
+    "## $1: bamlist number\n",
+    "## $2: bam file path\n",
+    "\n",
+    "mapfile -t bams < plist\"$1\".txt\n",
+    "num=${#bams[@]}\n",
+    "echo \"bams loaded: ${#bams[@]}\"\n",
+    "for (( i = 0; i < num; i++ ));\n",
+    "do\n",
+    "  if [ -f \"$2\"/\"${bams[i]}\"_deduped.bam ]; then\n",
+    "    echo \"extract subset of: ${bams[i]}.bam\"\n",
+    "    samtools view -b \"$2\"/\"${bams[i]}\"_deduped.bam 1:1-1000000 -o \"${bams[i]}\".sub.bam\n",
+    "    echo \"indexing file: ${bams[i]}.sub.bam\"\n",
+    "    samtools index -@ 20 \"${bams[i]}\".sub.bam &\n",
+    "  fi\n",
+    "done\n"
+   ],
+   "id": "f9bd312834365fa4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "You can use the script below to run `samtools mpilieup` with parameters fitting for Fastcall2:",
+   "id": "67224d1fcd00a5d1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%%bash\n",
+    "\n",
+    "#! /bin/bash\n",
+    "\n",
+    "# run samtools mpileup\n",
+    "# samtools version: 1.18\n",
+    "## $1: bam file prefix list number\n",
+    "## $2: reference genome\n",
+    "## $3: bam file directory\n",
+    "\n",
+    "mapfile -t prefix < plist\"$1\".txt\n",
+    "size=${#prefix[@]}\n",
+    "echo \"prefix loaded: ${#prefix[@]}\"\n",
+    "for ((i=0; i<size; i++));\n",
+    "  do\n",
+    "  if [ -f \"$3\"/\"${prefix[i]}\".sub.bam ]; then\n",
+    "    echo \"run samtools mpileup of: ${prefix[i]}.sub.bam\"\n",
+    "    samtools mpileup --no-output-ends -B -q 30 -Q 20 -f \"$2\" \"$3\"/\"${prefix[i]}\".sub.bam -r 1:1-1000000 -o \"${prefix[i]}\".mpileup\n",
+    "  fi\n",
+    "done"
+   ],
+   "id": "a26bae106fca10ec"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "## 3.1 prepare data\n",
     "To use Fastcall2, we should count the read depth of every sample first. You can use the script below to do this:"
    ],
