--- a/00basic/00seq_data_process.ipynb
+++ b/00basic/00seq_data_process.ipynb
@@ -517,16 +517,16 @@
     "## $1: depth prefix\n",
     "## $2: bam paths\n",
     "\n",
-    "mapfile -t prefix < plist\"$1\".txt\n",
-    "size=${#prefix[@]}\n",
-    "echo \"prefix loaded: ${#prefix[@]}\"\n",
+    "mapfile -t bams < plist\"$1\".txt\n",
+    "size=${#bams[@]}\n",
+    "echo \"bams loaded: ${#prefix[@]}\"\n",
     "for ((i=0; i<size; i++));\n",
     "  do\n",
-    "  if [ -f \"$2\"/\"${prefix[i]}\"_deduped.bam ]; then\n",
-    "    echo \"indexing file: ${bams[i]}.rmdup.bam\"\n",
-    "    samtools index -@ 20 \"${bams[i]}\".rmdup.bam\n",
-    "    echo \"Counting depth of: ${prefix[i]}_deduped.bam\"\n",
-    "    mosdepth -t 10 -n \"${prefix[i]}\" \"$2\"/\"${prefix[i]}\".rmdup.bam\n",
+    "  if [ -f \"$2\"/\"${bams[i]}\" ]; then\n",
+    "    echo \"indexing file: ${bams[i]}\"\n",
+    "    samtools index -@ 20 \"$2\"/\"${bams[i]}\"\n",
+    "    echo \"Counting depth of: ${bams[i]}\"\n",
+    "    mosdepth -t 10 -n \"${bams[i]}\" \"$2\"/\"${bams[i]}\"\n",
     "  fi\n",
     "done\n"
    ],
