--- a/00basic/00seq_data_process.ipynb
+++ b/00basic/00seq_data_process.ipynb
@@ -9,17 +9,24 @@
     "\n",
     "1. install conda\n",
     "```\n",
-    "wget https://mirrors.tuna.tsinghua.edu.cn/anaconda/miniconda/Miniconda3-py39_24.9.2-0-Linux-x86_64.sh\n",
-    "sh Miniconda3-py39_24.9.2-0-Linux-x86_64.sh\n",
-    "scp dazheng@159.226.116.203:~/.condarc .\n",
+    "wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
+    "sh Miniconda3-latest-Linux-x86_64.sh\n",
+    "conda init\n",
+    "scp dazheng@159.226.116.115:~/.condarc .\n",
     "```\n",
     "At the end of the installation, choose `yes` to initialize conda\n",
     "\n",
     "2. reads align-vmap tools\n",
     "```\n",
+    "conda create -n callSNP python=3.9\n",
+    "conda activate callSNP\n",
+    "conda install samtools bcftools\n",
+    "conda install mosdepth\n",
     "conda install fastqc\n",
-    "conda install bwa-mem2\n",
-    "conda install samtools\n",
+    "\n",
+    "conda create -n align python=3.9\n",
+    "conda activate align\n",
+    "conda install samtools bwa-mem2\n",
     "```\n",
     "3. other settings you may use like setting perl language in `~/.bashrc`:\n",
     "```\n",
