--- a/00basic/00seq_data_process.ipynb
+++ b/00basic/00seq_data_process.ipynb
@@ -566,6 +566,41 @@
     "done\n"
    ],
    "id": "7a496bea7ad2f689"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "There is a script to extract the mean depth of each sample and store it in a file:",
+   "id": "b52ecae2624ffa82"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%%bash\n",
+    "#!/bin/bash\n",
+    "\n",
+    "# File name: extract-depth\n",
+    "## $1: directory\n",
+    "## $2: output file\n",
+    "\n",
+    "folder_path=\"$1\"\n",
+    "output_file=\"$2\"\n",
+    "\n",
+    "find \"$folder_path\" -type f -print0 | while IFS= read -r -d $'\\0' file; do\n",
+    "  file_name=$(basename \"$file\")\n",
+    "  last_line=$(tail -n 1 \"$file\")\n",
+    "  if [ -n \"$last_line\" ]; then\n",
+    "    fourth_column=$(echo \"$last_line\" | awk '{print $4}')\n",
+    "    echo \"$file_name: $fourth_column\" >> \"$output_file\"\n",
+    "  else\n",
+    "    echo \"$file_name: is empty\" >> \"$output_file\"\n",
+    "  fi\n",
+    "done\n"
+   ],
+   "id": "b40bca257a24fedb"
   }
  ],
  "metadata": {
