--- a/00basic/00seq_data_process.ipynb
+++ b/00basic/00seq_data_process.ipynb
@@ -601,6 +601,27 @@
     "done\n"
    ],
    "id": "b40bca257a24fedb"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 3.2 run FastCall2\n",
+    "The most accurate specification of FastCall2 is on the wiki: https://github.com/PlantGeneticsLab/TIGER/wiki/FastCall-2\n",
+    "\n",
+    "The first step to run FastCall2 is `disc`:\n",
+    "- `nohup java -Xmx100g -jar TIGER_20231030.jar -app FastCall2 -mod disc -a ~/vmap4/00data/resources/fastCall/ref/chr001_1Mb.fa -b ../test.taxaBamMap.txt -c 0 -d 30 -e 20 -f 2 -g 0.2 -h 3 -i 0.8 -j 0.35 -k 0.2 -l 1 -m 32  -n ../04disc/ -o ~/miniconda3/envs/sc/bin/samtools > disc.log &`\n",
+    "\n",
+    "The second step is `blib`:\n",
+    "- `nohup java -Xmx100g -jar TIGER_20231030.jar -app FastCall2 -mod blib -a ../00data/resources/fastCall/ref/chr001_1Mb.fa -b 1 -c 2 -d 32 -e ../04disc/ -f ../05blib > blib.log &`\n",
+    "\n",
+    "The third step is `scan`:\n",
+    "- `nohup java -Xmx100g -jar TIGER_20231030.jar -app FastCall2 -mod scan -a ../00data/resources/fastCall/ref/chr001_1Mb.fa -b ../test.taxaBamMap.txt -c ../05blib/1_1_1000001.lib.gz -d 1 -e 0 -f 30 -g 20 -h 0.05 -i ~/miniconda3/envs/sc/bin/samtools -j 32 -k ../06scan > scan.log`\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "id": "fe8e7dbafcda61fd"
   }
  ],
  "metadata": {
