--- a/00basic/00seq_data_process.ipynb
+++ b/00basic/00seq_data_process.ipynb
@@ -606,6 +606,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "To create the `taxaBamMap.txt` file, I wrote a class in `Workshop` called `TaxaBamMapa` to generate the file. You can use the `jar` using the command below:\n",
+    "- `nohup java21 -Xmx100g -jar Workshop.jar -d ../02vmap4_depth -b ~/vmap_bam/ABD -o wap.taxaBamMap.txt`\n",
+    "\n",
     "## 3.2 run FastCall2\n",
     "The most accurate specification of FastCall2 is on the wiki: https://github.com/PlantGeneticsLab/TIGER/wiki/FastCall-2\n",
     "\n",
@@ -617,6 +620,8 @@
     "\n",
     "The third step is `scan`:\n",
     "- `nohup java -Xmx100g -jar TIGER_20231030.jar -app FastCall2 -mod scan -a ../00data/resources/fastCall/ref/chr001_1Mb.fa -b ../test.taxaBamMap.txt -c ../05blib/1_1_1000001.lib.gz -d 1 -e 0 -f 30 -g 20 -h 0.05 -i ~/miniconda3/envs/sc/bin/samtools -j 32 -k ../06scan > scan.log`\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
