--- a/00basic/00seq_data_process.ipynb
+++ b/00basic/00seq_data_process.ipynb
@@ -7,7 +7,7 @@
     "# 0 Build environment\n",
     "Before you do anything, you have to build the environment first.\n",
     "\n",
-    "1. install conda\n",
+    "1. install and set conda\n",
     "```\n",
     "wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
     "sh Miniconda3-latest-Linux-x86_64.sh\n",
@@ -16,11 +16,23 @@
     "```\n",
     "At the end of the installation, choose `yes` to initialize conda\n",
     "\n",
+    "Then, you can set `.condarc` with your mirror or other needs. For example, I use the following `.condarc`:\n",
+    "```\n",
+    "channels:\n",
+    "  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/bioconda/\n",
+    "  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/msys2/\n",
+    "  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge\n",
+    "  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/\n",
+    "  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/\n",
+    "  - defaults\n",
+    "solver: classic\n",
+    "```\n",
+    "\n",
     "2. reads align-vmap tools\n",
     "```\n",
     "conda create -n callSNP python=3.9\n",
     "conda activate callSNP\n",
-    "conda install samtools bcftools\n",
+    "conda install samtools=1.18 bcftools\n",
     "conda install mosdepth\n",
     "conda install fastqc\n",
     "\n",
@@ -342,13 +354,14 @@
     "# File name: prepare-check\n",
     "\n",
     "ls | grep rmdup.bam | grep -v \"md5\" | grep -v \"bai\" | grep -v \"mosdepth\" > name\n",
-    "sed -n '1,100p' name > cklist1.txt\n",
-    "sed -n '101,200p' name > cklist2.txt\n",
-    "sed -n '201,300p' name > cklist3.txt\n",
-    "sed -n '301,400p' name > cklist4.txt\n",
-    "sed -n '401,500p' name > cklist5.txt\n",
-    "sed -n '501,600p' name > cklist6.txt\n",
-    "sed -n '601,700p' name > cklist7.txt"
+    "total=$(wc -l name | awk '{print $1}')\n",
+    "lines_per_file=100\n",
+    "num_files=$(( (total + lines_per_file - 1) / lines_per_file ))\n",
+    "for ((i=1; i<=num_files; i++)); do\n",
+    "  start=$(( (i - 1) * lines_per_file + 1 ))\n",
+    "  end=$(( i * lines_per_file ))\n",
+    "  sed -n \"${start},${end}p\" name > \"cklist${i}.txt\"\n",
+    "done\n"
    ],
    "id": "c04b953db8864e50"
   },
@@ -475,6 +488,7 @@
    "cell_type": "markdown",
    "source": [
     "## 3.1 prepare data\n",
+    "\n",
     "To use Fastcall2, we should count the read depth of every sample first. You can use the script below to do this:"
    ],
    "id": "165c8cc94a589757"
@@ -610,6 +624,7 @@
     "- `nohup java21 -Xmx100g -jar Workshop.jar -d ../02vmap4_depth -b ~/vmap_bam/ABD -o wap.taxaBamMap.txt`\n",
     "\n",
     "## 3.2 run FastCall2\n",
+    "\n",
     "The most accurate specification of FastCall2 is on the wiki: https://github.com/PlantGeneticsLab/TIGER/wiki/FastCall-2\n",
     "\n",
     "The first step to run FastCall2 is `disc`:\n",
