--- a/00basic/00seq_data_process.ipynb
+++ b/00basic/00seq_data_process.ipynb
@@ -627,6 +627,8 @@
     "\n",
     "The most accurate specification of FastCall2 is on the wiki: https://github.com/PlantGeneticsLab/TIGER/wiki/FastCall-2\n",
     "\n",
+    "Remember to install the 1.18 version of `samtools`.\n",
+    "\n",
     "The first step to run FastCall2 is `disc`:\n",
     "- `nohup java -Xmx100g -jar TIGER_20231030.jar -app FastCall2 -mod disc -a ~/vmap4/00data/resources/fastCall/ref/chr001_1Mb.fa -b ../test.taxaBamMap.txt -c 0 -d 30 -e 20 -f 2 -g 0.2 -h 3 -i 0.8 -j 0.35 -k 0.2 -l 1 -m 32  -n ../04disc/ -o ~/miniconda3/envs/sc/bin/samtools > disc.log &`\n",
     "\n",
@@ -636,6 +638,35 @@
     "The third step is `scan`:\n",
     "- `nohup java -Xmx100g -jar TIGER_20231030.jar -app FastCall2 -mod scan -a ../00data/resources/fastCall/ref/chr001_1Mb.fa -b ../test.taxaBamMap.txt -c ../05blib/1_1_1000001.lib.gz -d 1 -e 0 -f 30 -g 20 -h 0.05 -i ~/miniconda3/envs/sc/bin/samtools -j 32 -k ../06scan > scan.log`\n",
     "\n",
+    "## 3.3 debug information\n",
+    "\n",
+    "When I tried to run `disc` for 4806 samples, I got the error message:\n",
+    "```\n",
+    "java.io.FileNotFoundException: /data/home/tusr1/02callSNP/lib/../disc/Becard/Kachu-2/1_1_5000001.ing.gz (No such file or directory)\n",
+    "        at java.io.FileOutputStream.open0(Native Method)\n",
+    "        at java.io.FileOutputStream.open(FileOutputStream.java:270)\n",
+    "        at java.io.FileOutputStream.<init>(FileOutputStream.java:213)\n",
+    "        at java.io.FileOutputStream.<init>(FileOutputStream.java:101)\n",
+    "        at pgl.infra.utils.IOUtils.getBinaryGzipWriter(IOUtils.java:115)\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.setDos(DiscoverVariation.java:384)\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.writeVariants(DiscoverVariation.java:400)\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.call(DiscoverVariation.java:422)\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.call(DiscoverVariation.java:243)\n",
+    "        at java.util.concurrent.FutureTask.run(FutureTask.java:266)\n",
+    "        at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)\n",
+    "        at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)\n",
+    "        at java.lang.Thread.run(Thread.java:750)\n",
+    "java.lang.NullPointerException\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.setDos(DiscoverVariation.java:386)\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.writeVariants(DiscoverVariation.java:400)\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.call(DiscoverVariation.java:422)\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.call(DiscoverVariation.java:243)\n",
+    "        at java.util.concurrent.FutureTask.run(FutureTask.java:266)\n",
+    "        at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)\n",
+    "        at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)\n",
+    "        at java.lang.Thread.run(Thread.java:750)\n",
+    "```\n",
+    "This is because `@SM` of some samples contains `/`, which is not allowed in the file name. Therefore, I finally choose `CRR` code as the `Taxa` in `taxaBamMap.txt` file.\n",
     "\n",
     "\n",
     "\n",
