--- a/00basic/00seq_data_process.ipynb
+++ b/00basic/00seq_data_process.ipynb
@@ -621,8 +621,42 @@
    "cell_type": "markdown",
    "source": [
     "To create the `taxaBamMap.txt` file, I wrote a class in `Workshop` called `TaxaBamMapa` to generate the file. You can use the `jar` using the command below:\n",
-    "- `nohup java21 -Xmx100g -jar Workshop.jar -d ../02vmap4_depth -b ~/vmap_bam/ABD -o wap.taxaBamMap.txt`\n",
+    "- `nohup java21 -Xmx100g -jar Workshop.jar -d ../02vmap4_depth -b ~/vmap_bam/ABD -o wap.taxaBamMap.txt`\n"
+   ],
+   "id": "3c17bf8ac593aaf8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%%bash\n",
     "\n",
+    "# 1 create taxaBamMap.txt on 243\n",
+    "\n",
+    "## 1.1 Watkins\n",
+    "java -Xmx100g -jar Workshop.jar -d /data/home/tusr1/02callSNP/00data/05data1_bam/115 -b /data/home/tusr1/02callSNP/00data/05data1_bam/115 -o 115.taxaBamMap.txt -t 115.taxaRunMap.txt\n",
+    "java -Xmx100g -jar Workshop.jar -d /data/home/tusr1/02callSNP/00data/05data1_bam/203 -b /data/home/tusr1/02callSNP/00data/05data1_bam/203 -o 203.taxaBamMap.txt -t 203.taxaRunMap.txt\n",
+    "java -Xmx100g -jar Workshop.jar -d /data/home/tusr1/02callSNP/00data/05data1_bam/204 -b /data/home/tusr1/02callSNP/00data/05data1_bam/204 -o 204.taxaBamMap.txt -t 204.taxaRunMap.txt\n",
+    "java -Xmx100g -jar Workshop.jar -d /data/home/tusr1/02callSNP/00data/05data1_bam/243 -b /data/home/tusr1/02callSNP/00data/05data1_bam/243 -o 243.taxaBamMap.txt -t 243.taxaRunMap.txt\n",
+    "java -Xmx100g -jar Workshop.jar -d /data/home/tusr1/02callSNP/00data/05data1_bam/66 -b /data/home/tusr1/02callSNP/00data/05data1_bam/66 -o 66.taxaBamMap.txt -t 66.taxaRunMap.txt\n",
+    "\n",
+    "## 1.2 WAP\n",
+    "java -Xmx100g -jar Workshop.jar -d /data/home/tusr1/02callSNP/00data/04depth/08WAP -b /data/home/tusr1/02callSNP/00data/02bam/ABD -o wap.taxaBamMap.txt -t wap.taxaRunMap.txt\n",
+    "## 1.3 vmap3\n",
+    "java -Xmx100g -jar Workshop.jar -d /data/home/tusr1/02callSNP/00data/04depth/01A -b /data/home/tusr1/02callSNP/00data/02bam/A -o a.taxaBamMap.txt -t a.taxaRunMap.txt\n",
+    "java -Xmx100g -jar Workshop.jar -d /data/home/tusr1/02callSNP/00data/04depth/02AB -b /data/home/tusr1/02callSNP/00data/02bam/AB -o ab.taxaBamMap.txt -t ab.taxaRunMap.txt\n",
+    "java -Xmx100g -jar Workshop.jar -d /data/home/tusr1/02callSNP/00data/04depth/03ABD -b /data/home/tusr1/02callSNP/00data/02bam/ABD -o abd.taxaBamMap.txt -t abd.taxaRunMap.txt\n",
+    "java -Xmx100g -jar Workshop.jar -d /data/home/tusr1/02callSNP/00data/04depth/04D -b /data/home/tusr1/02callSNP/00data/02bam/D -o d.taxaBamMap.txt -t d.taxaRunMap.txt\n",
+    "java -Xmx100g -jar Workshop.jar -d /data/home/tusr1/02callSNP/00data/04depth/07S -b /data/home/tusr1/02callSNP/00data/02bam/S -o s.taxaBamMap.txt -t s.taxaRunMap.txt\n"
+   ],
+   "id": "29bd89fa9bffae31"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "## 3.2 run FastCall2\n",
     "\n",
     "The most accurate specification of FastCall2 is on the wiki: https://github.com/PlantGeneticsLab/TIGER/wiki/FastCall-2\n",
@@ -638,41 +672,31 @@
     "The third step is `scan`:\n",
     "- `nohup java -Xmx100g -jar TIGER_20231030.jar -app FastCall2 -mod scan -a ../00data/resources/fastCall/ref/chr001_1Mb.fa -b ../test.taxaBamMap.txt -c ../05blib/1_1_1000001.lib.gz -d 1 -e 0 -f 30 -g 20 -h 0.05 -i ~/miniconda3/envs/sc/bin/samtools -j 32 -k ../06scan > scan.log`\n",
     "\n",
-    "## 3.3 debug information\n",
+    "## 3.2.1 run disc on different servers\n",
     "\n",
-    "When I tried to run `disc` for 4806 samples, I got the error message:\n",
-    "```\n",
-    "java.io.FileNotFoundException: /data/home/tusr1/02callSNP/lib/../disc/Becard/Kachu-2/1_1_5000001.ing.gz (No such file or directory)\n",
-    "        at java.io.FileOutputStream.open0(Native Method)\n",
-    "        at java.io.FileOutputStream.open(FileOutputStream.java:270)\n",
-    "        at java.io.FileOutputStream.<init>(FileOutputStream.java:213)\n",
-    "        at java.io.FileOutputStream.<init>(FileOutputStream.java:101)\n",
-    "        at pgl.infra.utils.IOUtils.getBinaryGzipWriter(IOUtils.java:115)\n",
-    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.setDos(DiscoverVariation.java:384)\n",
-    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.writeVariants(DiscoverVariation.java:400)\n",
-    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.call(DiscoverVariation.java:422)\n",
-    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.call(DiscoverVariation.java:243)\n",
-    "        at java.util.concurrent.FutureTask.run(FutureTask.java:266)\n",
-    "        at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)\n",
-    "        at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)\n",
-    "        at java.lang.Thread.run(Thread.java:750)\n",
-    "java.lang.NullPointerException\n",
-    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.setDos(DiscoverVariation.java:386)\n",
-    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.writeVariants(DiscoverVariation.java:400)\n",
-    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.call(DiscoverVariation.java:422)\n",
-    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.call(DiscoverVariation.java:243)\n",
-    "        at java.util.concurrent.FutureTask.run(FutureTask.java:266)\n",
-    "        at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)\n",
-    "        at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)\n",
-    "        at java.lang.Thread.run(Thread.java:750)\n",
-    "```\n",
-    "This is because `@SM` of some samples contains `/`, which is not allowed in the file name. Therefore, I finally choose `CRR` code as the `Taxa` in `taxaBamMap.txt` file.\n",
+    "Because the `disc` step is don't need to compare alleles of different samples, we can run it on different servers and collect the output `.ing` files.\n",
     "\n",
+    "Here is a script to run `disc` of Watkins population one by one on 243:"
+   ],
+   "id": "c834584ddd4c76e7"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%%bash\n",
     "\n",
-    "\n",
+    "# on 243\n",
+    "java -Xmx100g -jar TIGER_20250526.jar -app FastCall2 -mod disc -a /data/home/tusr1/02callSNP/00data/03ref/ABD/abd_iwgscV1.fa.gz -b /data/home/tusr1/02callSNP/00data/input/watkins.taxaBamMap.txt -c 0 -d 30 -e 20 -f 2 -g 0.2 -h 3 -i 0.8 -j 0.35 -k 0.2 -l 3 -m 32  -n /data/home/tusr1/02callSNP/disc/ -o ~/miniconda3/envs/callSNP/bin/samtools > disc.3.log\n",
+    "java -Xmx100g -jar TIGER_20250526.jar -app FastCall2 -mod disc -a /data/home/tusr1/02callSNP/00data/03ref/ABD/abd_iwgscV1.fa.gz -b /data/home/tusr1/02callSNP/00data/input/watkins.taxaBamMap.txt -c 0 -d 30 -e 20 -f 2 -g 0.2 -h 3 -i 0.8 -j 0.35 -k 0.2 -l 4 -m 32  -n /data/home/tusr1/02callSNP/disc/ -o ~/miniconda3/envs/callSNP/bin/samtools > disc.4.log\n",
+    "java -Xmx100g -jar TIGER_20250526.jar -app FastCall2 -mod disc -a /data/home/tusr1/02callSNP/00data/03ref/ABD/abd_iwgscV1.fa.gz -b /data/home/tusr1/02callSNP/00data/input/watkins.taxaBamMap.txt -c 0 -d 30 -e 20 -f 2 -g 0.2 -h 3 -i 0.8 -j 0.35 -k 0.2 -l 5 -m 32  -n /data/home/tusr1/02callSNP/disc/ -o ~/miniconda3/envs/callSNP/bin/samtools > disc.5.log\n",
+    "java -Xmx100g -jar TIGER_20250526.jar -app FastCall2 -mod disc -a /data/home/tusr1/02callSNP/00data/03ref/ABD/abd_iwgscV1.fa.gz -b /data/home/tusr1/02callSNP/00data/input/watkins.taxaBamMap.txt -c 0 -d 30 -e 20 -f 2 -g 0.2 -h 3 -i 0.8 -j 0.35 -k 0.2 -l 6 -m 32  -n /data/home/tusr1/02callSNP/disc/ -o ~/miniconda3/envs/callSNP/bin/samtools > disc.6.log\n",
+    "java -Xmx100g -jar TIGER_20250526.jar -app FastCall2 -mod disc -a /data/home/tusr1/02callSNP/00data/03ref/ABD/abd_iwgscV1.fa.gz -b /data/home/tusr1/02callSNP/00data/input/watkins.taxaBamMap.txt -c 0 -d 30 -e 20 -f 2 -g 0.2 -h 3 -i 0.8 -j 0.35 -k 0.2 -l 7 -m 32  -n /data/home/tusr1/02callSNP/disc/ -o ~/miniconda3/envs/callSNP/bin/samtools > disc.7.log\n",
     "\n"
    ],
-   "id": "fe8e7dbafcda61fd"
+   "id": "289c8140e67a8583"
   }
  ],
  "metadata": {
