--- a/01vmap4/germplasm/NCBI_taxa.ipynb
+++ b/01vmap4/germplasm/NCBI_taxa.ipynb
@@ -32,7 +32,17 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "from biomni.tools.literature import advanced_web_search",
+   "source": [
+    "from biomni.tools.literature import advanced_web_search\n",
+    "\n",
+    "print(\"Step 2: 研究NCBI Taxonomy API接口\")\n",
+    "search_result = advanced_web_search(\n",
+    "    query=\"NCBI Taxonomy API E-utilities taxon ID taxonomy database wheat Triticum\",\n",
+    "    max_searches=3\n",
+    ")\n",
+    "print(\"Search results:\")\n",
+    "print(search_result)"
+   ],
    "id": "9d83569117b1d92f"
   }
  ],
