--- a/00basic/00seq_data_process.ipynb
+++ b/00basic/00seq_data_process.ipynb
@@ -724,8 +724,14 @@
     "- `nohup java -Xmx100g -jar TIGER_20231030.jar -app FastCall2 -mod blib -a ../00data/resources/fastCall/ref/chr001_1Mb.fa -b 1 -c 2 -d 32 -e ../04disc/ -f ../05blib > blib.log &`\n",
     "\n",
     "The third step is `scan`:\n",
-    "- `nohup java -Xmx100g -jar TIGER_20231030.jar -app FastCall2 -mod scan -a ../00data/resources/fastCall/ref/chr001_1Mb.fa -b ../test.taxaBamMap.txt -c ../05blib/1_1_1000001.lib.gz -d 1 -e 0 -f 30 -g 20 -h 0.05 -i ~/miniconda3/envs/sc/bin/samtools -j 32 -k ../06scan > scan.log`\n",
-    "\n",
+    "- `nohup java -Xmx100g -jar TIGER_20231030.jar -app FastCall2 -mod scan -a ../00data/resources/fastCall/ref/chr001_1Mb.fa -b ../test.taxaBamMap.txt -c ../05blib/1_1_1000001.lib.gz -d 1 -e 0 -f 30 -g 20 -h 0.05 -i ~/miniconda3/envs/sc/bin/samtools -j 32 -k ../06scan > scan.log`\n"
+   ],
+   "id": "a208d08c507ef961"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "## 3.2.1 run disc on different servers\n",
     "\n",
     "Because the `disc` step is don't need to compare alleles of different samples, we can run it on different servers and collect the output `.ing` files.\n",
