--- a/note/00basic/00seq_data_process.ipynb
+++ b/note/00basic/00seq_data_process.ipynb
@@ -1,8 +1,9 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "1983d6c20a05ee98",
+   "metadata": {},
    "source": [
     "# 0 Build environment\n",
     "Before you do anything, you have to build the environment first.\n",
@@ -126,14 +127,14 @@
     "samtools faidx chr6A.fa\n",
     "```\n",
     "Or, you can use a script writen by senior student Jiayu Dong:"
-   ],
-   "id": "1983d6c20a05ee98"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "df4fcdb16708146d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "# file name: wheat_chr_merge.sh\n",
@@ -186,12 +187,12 @@
     "        else if($1==\"42\"){$1=\"7D\";$2=$2+453812268;$3=$3+453812268;print $0}\n",
     "\n",
     "        }'  > ${infile}.1.txt\n"
-   ],
-   "id": "df4fcdb16708146d"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "4c619cf3c524265a",
+   "metadata": {},
    "source": [
     "# 2 Alignment\n",
     "## 2.1 long sequence\n",
@@ -216,14 +217,14 @@
     "- sort and filter: `samtools`\n",
     "\n",
     "Vmap3 script:"
-   ],
-   "id": "4c619cf3c524265a"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "b889d47acdad196e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "for i in `cat fqlist.txt`\n",
@@ -240,20 +241,22 @@
     " && rm -f ${i}.fixmate.pos.bam\n",
     "\n",
     "done\n"
-   ],
-   "id": "b889d47acdad196e"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Vmap4 script: `bwa-mem2` version",
-   "id": "e5fadb975f24fd59"
+   "id": "e5fadb975f24fd59",
+   "metadata": {},
+   "source": [
+    "Vmap4 script: `bwa-mem2` version"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "8b7f2e478a070d88",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "#! /bin/bash\n",
@@ -272,20 +275,22 @@
     "bwa-mem2 mem -t 20 -R \"@RG\\tID:Triticum\\tPL:illumina\\tSM:${smlist[i]}\" \"$2\"/abd_iwgscV1.fa.gz \"$3\"/${fqlist[i]}/${fqlist[i]}_f1.fastq.gz \"$3\"/${fqlist[i]}/${fqlist[i]}_r2.fastq.gz | samtools view -S -b -> ${fqlist[i]}.bam\n",
     "samtools sort -n -m 4G -@ 20 -o ${fqlist[i]}.namesort.bam -O bam ${fqlist[i]}.bam && samtools fixmate -@ 20 -m ${fqlist[i]}.namesort.bam ${fqlist[i]}.fixmate.bam && samtools sort -m 4G -@ 20 -o ${fqlist[i]}.fixmate.pos.bam -O bam ${fqlist[i]}.fixmate.bam && rm -f ${fqlist[i]}.namesort.bam && samtools markdup -@ 20 -r ${fqlist[i]}.fixmate.pos.bam ${fqlist[i]}.rmdup.bam && rm -f ${fqlist[i]}.fixmate.bam && rm -f ${fqlist[i]}.fixmate.pos.bam && rm -f ${fqlist[i]}.bam\n",
     "done\n"
-   ],
-   "id": "8b7f2e478a070d88"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Vmap4 script: `bwa` version",
-   "id": "70d37df045895d62"
+   "id": "70d37df045895d62",
+   "metadata": {},
+   "source": [
+    "Vmap4 script: `bwa` version"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "4700f637d6c98d04",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -297,12 +302,12 @@
     "bwa mem -t 20 -R \"@RG\\tID:Triticum\\tPL:illumina\\tSM:${smlist[i]}\" /nfs/public_data/wheat/00_genome/reference/v1.0/ABD/bwaLib/abd_iwgscV1.fa.gz \"$1\"/${fqlist[i]}/${fqlist[i]}_f1.fastq.gz \"$1\"/${fqlist[i]}/${fqlist[i]}_r2.fastq.gz | samtools view -S -b -> ${fqlist[i]}.bam\n",
     "samtools sort -n -m 4G -@ 20 -o ${fqlist[i]}.namesort.bam -O bam ${fqlist[i]}.bam && samtools fixmate -@ 20 -m ${fqlist[i]}.namesort.bam ${fqlist[i]}.fixmate.bam && samtools sort -m 4G -@ 20 -o ${fqlist[i]}.fixmate.pos.bam -O bam ${fqlist[i]}.fixmate.bam && rm -f ${fqlist[i]}.namesort.bam && samtools markdup -@ 20 -r ${fqlist[i]}.fixmate.pos.bam ${fqlist[i]}.rmdup.bam && rm -f ${fqlist[i]}.fixmate.bam && rm -f ${fqlist[i]}.fixmate.pos.bam\n",
     "done\n"
-   ],
-   "id": "4700f637d6c98d04"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "c7fe7b1b94bb42cd",
+   "metadata": {},
    "source": [
     "## 2.3 filter\n",
     "View `.bam` file:\n",
@@ -310,14 +315,14 @@
     "\n",
     "## 2.4 record md5 of .bam file\n",
     "Use `md5sum` to count the md5 of the `.bam` files. There 2 scripts to count and check the md5 codes:"
-   ],
-   "id": "c7fe7b1b94bb42cd"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "f6cc49e092a4bcd5",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "#! /bin/bash\n",
@@ -334,20 +339,22 @@
     "    fi\n",
     "done\n",
     "wait\n"
-   ],
-   "id": "f6cc49e092a4bcd5"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "There is a script to separate files into different parts, so that we can run it in parallel:",
-   "id": "12e19a8c02dbe642"
+   "id": "12e19a8c02dbe642",
+   "metadata": {},
+   "source": [
+    "There is a script to separate files into different parts, so that we can run it in parallel:"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "c04b953db8864e50",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -362,20 +369,22 @@
     "  end=$(( i * lines_per_file ))\n",
     "  sed -n \"${start},${end}p\" name > \"cklist${i}.txt\"\n",
     "done\n"
-   ],
-   "id": "c04b953db8864e50"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Then, run script `check-md5` below with command: `nohup sh check-md5.sh 1 &`",
-   "id": "e66ec6b50861d509"
+   "id": "e66ec6b50861d509",
+   "metadata": {},
+   "source": [
+    "Then, run script `check-md5` below with command: `nohup sh check-md5.sh 1 &`"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "b7ce9456ddb33f91",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -404,26 +413,26 @@
     "    fi\n",
     "done\n",
     "wait"
-   ],
-   "id": "b7ce9456ddb33f91"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "dab04cfb19ea5a21",
+   "metadata": {},
    "source": [
     "# 3 Variant calling\n",
     "## 3.0 benchmark Fastcall2\n",
     "To benchmark Fastcall2, we need to prepare some test dataset.\n",
     "\n",
     "You can use the script below to generate a test dataset:"
-   ],
-   "id": "dab04cfb19ea5a21"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "57ea9a15603d0798",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -448,14 +457,14 @@
     "    samtools index -@ 20 \"${bams[i]}\".sub.bam &\n",
     "  fi\n",
     "done\n"
-   ],
-   "id": "57ea9a15603d0798"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "f9bd312834365fa4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -471,26 +480,26 @@
     "  end=$(( i * lines_per_file ))\n",
     "  sed -n \"${start},${end}p\" name > \"plist${i}.txt\"\n",
     "done"
-   ],
-   "id": "f9bd312834365fa4"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "67224d1fcd00a5d1",
+   "metadata": {},
    "source": [
     "You can use `seqkit` to generate test reference genome: `conda install seqkit`\n",
     "- `seqkit subseq -r 1:1000000 ../03ref/ABD/abd_iwgscV1.fa.gz -o abd_1M.fa`\n",
     "- `seqkit grep -n 1 abd_1M.fa -o abd_1_1M.fa`\n",
     "\n",
     "You can use the script below to run `samtools mpilieup` with parameters fitting for Fastcall2:"
-   ],
-   "id": "67224d1fcd00a5d1"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "a26bae106fca10ec",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -512,24 +521,24 @@
     "    samtools mpileup --no-output-ends -B -q 30 -Q 20 -f \"$2\" \"$3\"/\"${prefix[i]}\".sub.bam -r 1:1-1000000 -o \"${prefix[i]}\".mpileup\n",
     "  fi\n",
     "done"
-   ],
-   "id": "a26bae106fca10ec"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "165c8cc94a589757",
+   "metadata": {},
    "source": [
     "## 3.1 prepare data\n",
     "\n",
     "To use Fastcall2, we should count the read depth of every sample first. You can use the script below to do this:"
-   ],
-   "id": "165c8cc94a589757"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "9cfa5ee78ab98bb2",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "#! /bin/bash\n",
@@ -548,20 +557,22 @@
     "    mosdepth -t 10 -n \"${prefix[i]}\" \"$2\"/\"${prefix[i]}\"_deduped.bam\n",
     "  fi\n",
     "done\n"
-   ],
-   "id": "9cfa5ee78ab98bb2"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Or, you can use the script below for the bam file just generated by `bwa-mem2`:",
-   "id": "b75582d0e1389a10"
+   "id": "b75582d0e1389a10",
+   "metadata": {},
+   "source": [
+    "Or, you can use the script below for the bam file just generated by `bwa-mem2`:"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "384cae3c04b9e230",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -582,20 +593,22 @@
     "    mosdepth -t 10 -n \"${bams[i]}\" \"$2\"/\"${bams[i]}\"\n",
     "  fi\n",
     "done\n"
-   ],
-   "id": "384cae3c04b9e230"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Some md5 codes are stored in one file. We usually create a new file to store the md5 codes for each bam file, using the script below:",
-   "id": "905d7b66e32f5973"
+   "id": "905d7b66e32f5973",
+   "metadata": {},
+   "source": [
+    "Some md5 codes are stored in one file. We usually create a new file to store the md5 codes for each bam file, using the script below:"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "7a496bea7ad2f689",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -610,20 +623,22 @@
     "    grep \"${bams[i]}\" md5sum.txt > \"${bams[i]}\".md5\n",
     "  fi\n",
     "done\n"
-   ],
-   "id": "7a496bea7ad2f689"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "There is a script to extract the mean depth of each sample and store it in a file:",
-   "id": "b52ecae2624ffa82"
+   "id": "b52ecae2624ffa82",
+   "metadata": {},
+   "source": [
+    "There is a script to extract the mean depth of each sample and store it in a file:"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "b40bca257a24fedb",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "#!/bin/bash\n",
@@ -645,23 +660,23 @@
     "    echo \"$file_name: is empty\" >> \"$output_file\"\n",
     "  fi\n",
     "done\n"
-   ],
-   "id": "b40bca257a24fedb"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "3c17bf8ac593aaf8",
+   "metadata": {},
    "source": [
     "To create the `taxaBamMap.txt` file, I wrote a class in `Workshop` called `TaxaBamMapa` to generate the file. You can use the `jar` using the command below:\n",
     "- `nohup java21 -Xmx100g -jar Workshop.jar -d ../02vmap4_depth -b ~/vmap_bam/ABD -o wap.taxaBamMap.txt`\n"
-   ],
-   "id": "3c17bf8ac593aaf8"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "29bd89fa9bffae31",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -704,12 +719,12 @@
     "## 1.3 others\n",
     "java -Xmx100g -jar Workshop.jar -d /data/home/dazheng/vmap4/00data/04depth/05HZNU -b /data/home/dazheng/vmap4/00data/02bam/HZNU -o hznu.taxaBamMap.txt -t hznu.taxaRunMap.txt\n",
     "java -Xmx100g -jar Workshop.jar -d /data/home/dazheng/vmap4/00data/04depth/06Nature -b /data/home/dazheng/vmap4/00data/02bam/Nature -o nature.taxaBamMap.txt -t nature.taxaRunMap.txt\n"
-   ],
-   "id": "29bd89fa9bffae31"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "a208d08c507ef961",
+   "metadata": {},
    "source": [
     "## 3.2 run FastCall2\n",
     "\n",
@@ -725,26 +740,26 @@
     "\n",
     "The third step is `scan`:\n",
     "- `nohup java -Xmx100g -jar TIGER_20231030.jar -app FastCall2 -mod scan -a ../00data/resources/fastCall/ref/chr001_1Mb.fa -b ../test.taxaBamMap.txt -c ../05blib/1_1_1000001.lib.gz -d 1 -e 0 -f 30 -g 20 -h 0.05 -i ~/miniconda3/envs/sc/bin/samtools -j 32 -k ../06scan > scan.log`\n"
-   ],
-   "id": "a208d08c507ef961"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "c834584ddd4c76e7",
+   "metadata": {},
    "source": [
     "## 3.2.1 run disc on different servers\n",
     "\n",
     "Because the `disc` step is don't need to compare alleles of different samples, we can run it on different servers and collect the output `.ing` files.\n",
     "\n",
     "Here is a script to run `disc` of Watkins population one by one on 243:"
-   ],
-   "id": "c834584ddd4c76e7"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "289c8140e67a8583",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -767,8 +782,7 @@
     "\n",
     "\n",
     "\n"
-   ],
-   "id": "289c8140e67a8583"
+   ]
   }
  ],
  "metadata": {
